fixed task and block backgrounds from being too long

--- a/frontend/src/Styling/blocks.css
+++ b/frontend/src/Styling/blocks.css
@@ -97,7 +97,7 @@
 }
 .blockPageContainer {
   background-color: white;
-  height: 78vh;
+  height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
   border: 3px solid black;
@@ -337,5 +337,8 @@ input[type="checkbox"] {
   }
   .blockChangeHeader{
     width: 300px;
+  }
+  .blockPageBackground{
+    height: calc(100vh - 170px);
   }
 }
